--- a/index.html
+++ b/index.html
@@ -340,8 +340,15 @@
 				<a href="###4" class="point"></a>
 			</div>
 		</div>
-		<div id="activities"></div>
-		<section id="main"></section>
+		<div id="activities">
+			<div id="activities_box"></div>
+		</div>
+		<section id="main">
+			<section id="main_box">
+				<p>美丽人生</p>
+				<a href="#" class="rf">查看全部 ></a>
+			</section>
+		</section>
 	</content>
 	<footer></footer>
 </body>
